--- a/pages/index.html
+++ b/pages/index.html
@@ -471,59 +471,282 @@
         </div>
         <ul class="row">
           <li class="col-lg-3">
-            <ul>
-              <li>
-                <a href="#"><i class="bi bi-dot"></i> 酒精路跑地圖</a>
+            <ul class="nav nav-tabs row-gap-5" id="myTab" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link active"
+                  id="home-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#tab-pane-1"
+                  type="button"
+                  role="tab"
+                  aria-controls="home-tab-pane"
+                  aria-selected="true"
+                >
+                  <i class="bi bi-dot"></i> 酒精路跑地圖
+                </button>
               </li>
-              <li>
-                <a href="#"><i class="bi bi-dot"></i> 台北拉麵地圖</a>
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link"
+                  id="home-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#tab-pane-2"
+                  type="button"
+                  role="tab"
+                  aria-controls="home-tab-pane"
+                  aria-selected="true"
+                >
+                  <i class="bi bi-dot"></i> 台北拉麵圖鑑
+                </button>
               </li>
-              <li>
-                <a href="#"><i class="bi bi-dot"></i> 海島自由行</a>
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link"
+                  id="profile-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#tab-pane-3"
+                  type="button"
+                  role="tab"
+                  aria-controls="profile-tab-pane"
+                  aria-selected="false"
+                >
+                  <i class="bi bi-dot"></i> 海島自由行
+                </button>
               </li>
-              <li>
-                <a href="#"><i class="bi bi-dot"></i> 短天數出國推薦</a>
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link"
+                  id="contact-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#tab-pane-4"
+                  type="button"
+                  role="tab"
+                  aria-controls="contact-tab-pane"
+                  aria-selected="false"
+                >
+                  <i class="bi bi-dot"></i> 短天數出國推薦
+                </button>
               </li>
-              <li>
-                <a href="#"><i class="bi bi-dot"></i> 週末露營趣</a>
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link"
+                  id="contact-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#tab-pane-5"
+                  type="button"
+                  role="tab"
+                  aria-controls="contact-tab-pane"
+                  aria-selected="false"
+                >
+                  <i class="bi bi-dot"></i> 週末露營趣
+                </button>
               </li>
             </ul>
           </li>
           <li class="col-lg-9">
-            <div class="content">
-              <h4 class="text-success">酒精路跑地圖</h4>
-              <ul>
-                <li class="mb-4">｜城市酒吧人氣榜,盤點當紅熱門酒吧</li>
-                <li class="mb-4">
-                  ｜你要的調酒師在這裡！五月全台酒吧客座活動整理
-                </li>
-                <li class="mb-4">｜台南老宅手工酒藏,尋味百年人文釀意</li>
-              </ul>
-              <ul class="row g-1">
-                <li class="col-lg-3">
-                  <img src="../assets/images/hots-1.png" alt="hots-1" />
-                </li>
-                <li class="col-lg-3">
-                  <img src="../assets/images/hots-2.png" alt="hots-2" />
-                </li>
-                <li class="col-lg-3">
-                  <img src="../assets/images/hots-3.png" alt="hots-3" />
-                </li>
-                <li class="col-lg-3">
-                  <img src="../assets/images/hots-4.png" alt="hots-4" />
-                </li>
-              </ul>
-              <div class="content-bottom">
-                <ul class="hashtag">
-                  <li>#夜貓行程</li>
-                  <li>#barhopping</li>
-                  <li>#全台酒吧</li>
+            <ul class="tab-content content" id="myTabContent">
+              <li
+                class="tab-pane fade show active"
+                id="tab-pane-1"
+                role="tabpanel"
+                aria-labelledby="tab-pane-1"
+                tabindex="0"
+              >
+                <h4 class="text-success">酒精路跑地圖</h4>
+                <ul>
+                  <li class="mb-4">｜城市酒吧人氣榜,盤點當紅熱門酒吧</li>
+                  <li class="mb-4">
+                    ｜你要的調酒師在這裡！五月全台酒吧客座活動整理
+                  </li>
+                  <li class="mb-4">｜台南老宅手工酒藏,尋味百年人文釀意</li>
                 </ul>
-                <a href="#" class="text-success"
-                  >View More <i class="bi bi-arrow-right"></i
-                ></a>
-              </div>
-            </div>
+                <ul class="row g-1">
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-1.png" alt="hots-1" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-2.png" alt="hots-2" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-3.png" alt="hots-3" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-4.png" alt="hots-4" />
+                  </li>
+                </ul>
+                <div class="content-bottom">
+                  <ul class="hashtag">
+                    <li>#夜貓行程</li>
+                    <li>#barhopping</li>
+                    <li>#全台酒吧</li>
+                  </ul>
+                  <a href="#" class="text-success"
+                    >View More <i class="bi bi-arrow-right"></i
+                  ></a>
+                </div>
+              </li>
+              <li
+                class="tab-pane fade"
+                id="tab-pane-2"
+                role="tabpanel"
+                aria-labelledby="tab-pane-2"
+                tabindex="0"
+              >
+                <h4 class="text-success">台北拉麵圖鑑</h4>
+                <ul>
+                  <li class="mb-4">｜城市拉麵人氣榜,盤點當紅熱門拉麵</li>
+                  <li class="mb-4">
+                    ｜你要的拉麵師傅在這裡！五月全台拉麵客座活動整理
+                  </li>
+                  <li class="mb-4">｜台北手工拉麵,尋味百年人文手藝</li>
+                </ul>
+                <ul class="row g-1">
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-1.png" alt="hots-1" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-2.png" alt="hots-2" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-3.png" alt="hots-3" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-4.png" alt="hots-4" />
+                  </li>
+                </ul>
+                <div class="content-bottom">
+                  <ul class="hashtag">
+                    <li>#拉麵吃爽爽</li>
+                    <li>#fresh</li>
+                    <li>#台北名店</li>
+                  </ul>
+                  <a href="#" class="text-success"
+                    >View More <i class="bi bi-arrow-right"></i
+                  ></a>
+                </div>
+              </li>
+              <li
+                class="tab-pane fade"
+                id="tab-pane-3"
+                role="tabpanel"
+                aria-labelledby="tab-pane-3"
+                tabindex="0"
+              >
+                <h4 class="text-success">海島自由行</h4>
+                <ul>
+                  <li class="mb-4">｜海島人氣景點,盤點當紅拍照聖地</li>
+                  <li class="mb-4">
+                    ｜你要的調酒師在這裡！五月全台酒吧客座活動整理
+                  </li>
+                  <li class="mb-4">｜台南老宅手工酒藏,尋味百年人文釀意</li>
+                </ul>
+                <ul class="row g-1">
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-1.png" alt="hots-1" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-2.png" alt="hots-2" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-3.png" alt="hots-3" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-4.png" alt="hots-4" />
+                  </li>
+                </ul>
+                <div class="content-bottom">
+                  <ul class="hashtag">
+                    <li>#走透透</li>
+                    <li>#barhopping</li>
+                    <li>#全台酒吧</li>
+                  </ul>
+                  <a href="#" class="text-success"
+                    >View More <i class="bi bi-arrow-right"></i
+                  ></a>
+                </div>
+              </li>
+              <li
+                class="tab-pane fade"
+                id="tab-pane-4"
+                role="tabpanel"
+                aria-labelledby="tab-pane-4"
+                tabindex="0"
+              >
+                <h4 class="text-success">短天數出國推薦</h4>
+                <ul>
+                  <li class="mb-4">｜城市酒吧人氣榜,盤點當紅熱門酒吧</li>
+                  <li class="mb-4">
+                    ｜你要的調酒師在這裡！五月全台酒吧客座活動整理
+                  </li>
+                  <li class="mb-4">｜台南老宅手工酒藏,尋味百年人文釀意</li>
+                </ul>
+                <ul class="row g-1">
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-1.png" alt="hots-1" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-2.png" alt="hots-2" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-3.png" alt="hots-3" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-4.png" alt="hots-4" />
+                  </li>
+                </ul>
+                <div class="content-bottom">
+                  <ul class="hashtag">
+                    <li>#玩好玩滿</li>
+                    <li>#日幣大貶</li>
+                    <li>#美妝團購</li>
+                  </ul>
+                  <a href="#" class="text-success"
+                    >View More <i class="bi bi-arrow-right"></i
+                  ></a>
+                </div>
+              </li>
+              <li
+                class="tab-pane fade"
+                id="tab-pane-5"
+                role="tabpanel"
+                aria-labelledby="tab-pane-5"
+                tabindex="0"
+              >
+                <h4 class="text-success">週末露營趣</h4>
+                <ul>
+                  <li class="mb-4">｜城市酒吧人氣榜,盤點當紅熱門酒吧</li>
+                  <li class="mb-4">
+                    ｜你要的調酒師在這裡！五月全台酒吧客座活動整理
+                  </li>
+                  <li class="mb-4">｜台南老宅手工酒藏,尋味百年人文釀意</li>
+                </ul>
+                <ul class="row g-1">
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-1.png" alt="hots-1" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-2.png" alt="hots-2" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-3.png" alt="hots-3" />
+                  </li>
+                  <li class="col-lg-3">
+                    <img src="../assets/images/hots-4.png" alt="hots-4" />
+                  </li>
+                </ul>
+                <div class="content-bottom">
+                  <ul class="hashtag">
+                    <li>#夜貓行程</li>
+                    <li>#barhopping</li>
+                    <li>#全台酒吧</li>
+                  </ul>
+                  <a href="#" class="text-success"
+                    >View More <i class="bi bi-arrow-right"></i
+                  ></a>
+                </div>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -531,7 +754,24 @@
 
     <section class="bg-primary">
       <div class="container life">
-        <h4>品味生活</h4>
+        <div class="d-flex justify-content-between mb-8">
+          <h4>品味生活</h4>
+          <div class="button-pc">
+            <button type="button" class="btn btn-outline me-2">
+              <i class="bi bi-arrow-left"></i>
+            </button>
+            <div
+              style="
+                width: 80px;
+                border-bottom: 1px solid #6c757d;
+                align-self: center;
+              "
+            ></div>
+            <button type="button" class="btn btn-outline ms-2">
+              <i class="bi bi-arrow-right"></i>
+            </button>
+          </div>
+        </div>
         <ul class="row">
           <li class="col-lg-4">
             <strong>食.</strong>
@@ -665,7 +905,7 @@
                         alt="project-1"
                       />
                       <div class="card-text">
-                        <div>由女孩的健行比筆記?</div>
+                        <div>由女孩的健行筆記?</div>
                         <div><i class="bi bi-arrow-right"></i></div>
                       </div>
                     </a>
@@ -682,7 +922,7 @@
                         alt="project-3"
                       />
                       <div class="card-text">
-                        <div>適合溜小孩的害邊景點推薦?</div>
+                        <div>適合溜小孩的海邊景點推薦?</div>
                         <div><i class="bi bi-arrow-right"></i></div>
                       </div>
                     </a>
@@ -720,7 +960,7 @@
                       alt="project-1"
                     />
                     <div class="card-text">
-                      <div>由女孩的健行比筆記?</div>
+                      <div>由女孩的健行筆記?</div>
                       <div><i class="bi bi-arrow-right"></i></div>
                     </div>
                   </a>
@@ -754,7 +994,7 @@
                       alt="project-3"
                     />
                     <div class="card-text">
-                      <div>適合溜小孩的害邊景點推薦?</div>
+                      <div>適合溜小孩的海邊景點推薦?</div>
                       <div><i class="bi bi-arrow-right"></i></div>
                     </div>
                   </a>
@@ -781,12 +1021,7 @@
       </div>
     </section>
 
-    <section class="bg-primary">
-      <div class="container copyright">
-        <div class="nav-border"></div>
-        <div class="bottom-text">@Vivre 2024 All right Reserved</div>
-      </div>
-    </section>
+    <%- include('./layout/footer'); -%>
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
