--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-primary">
   <div class="container">
-    <div><a class="navbar-logo" href="../pages/index.html">Vivre</a></div>
+    <div><a class="navbar-logo" href="index.html">Vivre</a></div>
     <button
       class="navbar-toggler"
       type="button"
@@ -38,10 +38,7 @@
       </form>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a
-            class="nav-link active"
-            aria-current="page"
-            href="../pages/article-1.html"
+          <a class="nav-link active" aria-current="page" href="article-1.html"
             >所有文章</a
           >
         </li>
