--- a/article-1.html
+++ b/article-1.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-primary">
   <div class="container">
-    <div><a class="navbar-logo" href="index.html">Vivre</a></div>
+    <div><a class="navbar-logo" href="./index.html">Vivre</a></div>
     <button
       class="navbar-toggler"
       type="button"
@@ -38,7 +38,7 @@
       </form>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="article-1.html"
+          <a class="nav-link active" aria-current="page" href="./article-1.html"
             >所有文章</a
           >
         </li>
@@ -73,7 +73,7 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="index.html">首頁</a>
+              <a href="./index.html">首頁</a>
             </li>
             <li class="breadcrumb-item"><a href="#">所以文章</a></li>
             <li class="breadcrumb-item active text-success" aria-current="page">
