--- a/pages/article-1.html
+++ b/pages/article-1.html
@@ -26,7 +26,7 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="index.html">首頁</a>
+              <a href="./index.html">首頁</a>
             </li>
             <li class="breadcrumb-item"><a href="#">所以文章</a></li>
             <li class="breadcrumb-item active text-success" aria-current="page">
